Sat Feb 16 04:21:07 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: workaround for mswin/mingw build problem.
	  sendmsg emulation in win32/win32.c is not enough.

Sat Feb 16 00:19:20 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: use all all tested available headers for
	  have_func.

Fri Feb 15 22:21:37 2013  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix a bug introduced in r38342 that the cflagspat
	  substitution is messed up by the way CFLAGS and optflags are
	  modified, which affected FreeBSD and NetBSD/amd64 when
	  configured to use libexecinfo.  This bug resulted in CFLAGS and
	  CXXFLAGS in RbConfig::CONFIG having warnflags expanded in them,
	  forcing third-party C/C++ extensions to follow what warnflags
	  demands, like ANSI/ISO-C90 conformance.  ref [Bug #7101]

Fri Feb 15 20:29:11 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SET_SIN_LEN): defined for strict-aliasing
	  rule.
	  (INIT_SOCKADDR_IN): ditto.

	* ext/socket/raddrinfo.c (make_inetaddr): use INIT_SOCKADDR_IN.
	  (addrinfo_ipv6_to_ipv4): ditto.

Fri Feb 15 18:24:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#try_run): bail out explicitly if cross
	  compiling, because it cannot work of course.

Fri Feb 15 12:34:58 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test struct sockaddr_storage directly.

	* ext/socket/rubysocket.h: use HAVE_TYPE_STRUCT_SOCKADDR_STORAGE.

Fri Feb 15 12:26:13 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/getaddrinfo.c (GET_AI): don't cast 1st argument for
	  INIT_SOCKADDR.

Fri Feb 15 08:12:11 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SET_SS_LEN): removed.
	  (SET_SIN_LEN): removed.
	  (INIT_SOCKADDR): new macro.

	* ext/socket/ancdata.c (extract_ipv6_pktinfo): use INIT_SOCKADDR.

	* ext/socket/raddrinfo.c (make_inetaddr): use INIT_SOCKADDR.
	  (addrinfo_ipv6_to_ipv4): ditto.

	* ext/socket/getaddrinfo.c (GET_AI): use INIT_SOCKADDR.
