@@ -1,3 +1,12 @@
+Sat Feb 16 07:05:59 2013  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/sockport.h (INIT_SOCKADDR_IN): don't need family
+	  argument.  it is always AF_INET.
+
+	* ext/socket/raddrinfo.c (make_inetaddr): follow INIT_SOCKADDR_IN
+	  change.
+	  (addrinfo_ipv6_to_ipv4): ditto.
+
 Sat Feb 16 04:21:07 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/extconf.rb: workaround for mswin/mingw build problem.
